Modificado readme para explicar la instalacion de contenedores con los nuevos .yaml